kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: comments-summarizer-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9090
      targetPort: 80
      protocol: TCP
  selector:
    app: comments-summarizer
