kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comments-summarizer-ingress
spec:
  ingressClassName: nginx-ext
  tls:
    - hosts:
        - comments-summarizer.kube-ext.isc.heia-fr.ch
  rules:
    - host: comments-summarizer.kube-ext.isc.heia-fr.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: comments-summarizer-service
                port:
                  number: 80
